Bug #5973 ndb table belonging to different database shows up in show tables
Submitted: 8 Oct 2004 9:55 Modified: 8 Oct 2004 14:37
Reporter: Tomas Ulin
Status: Closed
Category:Server: Cluster Severity:S2 (Serious)
Version:4.1.6 OS:linx
Assigned to: Magnus Blaudd Target Version:

[8 Oct 2004 9:55] Tomas Ulin
Description:
ndb table belonging to different database shows up in show tables

How to repeat:
mysql> show tables;
Empty set (0.00 sec)

mysql> create table t1 (a int);
Query OK, 0 rows affected (0.07 sec)

mysql> 
mysql> 
mysql> show tables;
+----------------+
| Tables_in_test |
+----------------+
| t1             |
+----------------+
1 row in set (0.01 sec)

mysql> create database test2;
Query OK, 1 row affected (0.02 sec)

mysql> use test2;
Reading table information for completion of table and column names
You can turn off this feature to get a quicker startup with -A

Didn't find any fields in table 't1'
Database changed
mysql> show tables;
+-----------------+
| Tables_in_test2 |
+-----------------+
| t1              |
+-----------------+
1 row in set (0.03 sec)

mysql> select * from t1;
ERROR 1146 (42S02): Table 'test2.t1' doesn't exist
mysql> use test;
Reading table information for completion of table and column names
You can turn off this feature to get a quicker startup with -A

Database changed
mysql> select * from t1;
Empty set (0.00 sec)

mysql>
[8 Oct 2004 10:02] Tomas Ulin
mysql> create table t3 (a int, b longblob);
Query OK, 0 rows affected (0.09 sec)

mysql> show tables;
+-----------------+
| Tables_in_test2 |
+-----------------+
| t2              |
| t3              |
| t1              |
| NDB$BLOB_10_1   |
+-----------------+
4 rows in set (0.03 sec)

mysql>
[8 Oct 2004 11:44] Magnus Blaudd
A fix for the  NDB$BLOB_* tables showing up has been pushed.
[8 Oct 2004 14:37] Magnus Blaudd
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.

If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information 
about accessing the source trees is available at
    http://www.mysql.com/doc/en/Installing_source_tree.html